--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.1.8",
+    "heroicons": "^2.1.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
