--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
     "@heroicons/react": "^2.1.3",
+    "@react-google-maps/api": "^2.19.3",
+    "@types/google.maps": "^3.55.8",
     "framer-motion": "^11.1.8",
     "heroicons": "^2.1.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-iframe": "^1.8.5"
   },
   "devDependencies": {
     "eslint": "^8",
